feat: add click-to-zoom media preview functionality, increase hover zoom scale, and update configuration settings